implement user create

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,9 +2,9 @@
   <fieldset>
     <legend><%- msg('register') %></legend>
     <div class="control-group">
-      <label class="control-label" for="username"><%- msg('Username') %></label>
+      <label class="control-label" for="name"><%- msg('Username') %></label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="username" name="username">
+        <input type="text" class="input-xlarge" id="name" name="name">
         <p class="help-block"><%- msg('reg-username-tips') %></p>
       </div>
     </div>
