--- a/views/group.ejs
+++ b/views/group.ejs
@@ -12,7 +12,11 @@
       </tr>
       <tr>
         <th><%- msg('group-admins') %></th>
-        <td><%= group.admins %></td>
+        <td>
+          <% for (var i in group.admins) { %>
+            <a href="/u/<%= group.admins[i].name %>"><%= group.admins[i].title %></a>
+          <% } %>
+        </td>
       </tr>
       <% if (group.parent) { %>
         <tr>
@@ -22,16 +26,14 @@
           </td>
         </tr>
       <% } %>
-      <% if (group.children.length > 0) { %>
-        <tr>
-          <th><%- msg('group-children') %></th>
-          <td>
-            <% for (var i in group.children) { %>
-              <a href="/group/<%= group.children[i].name %>"><%= group.children[i].title %></a>
-            <% } %>
-          </td>
-        </tr>
-      <% } %>
+      <tr>
+        <th><%- msg('group-children') %></th>
+        <td>
+          <% for (var i in group.children) { %>
+            <a href="/group/<%= group.children[i].name %>"><%= group.children[i].title %></a>
+          <% } %>
+        </td>
+      </tr>
     </table>
   </div>
   <div class="span8">
