--- a/views/group.ejs
+++ b/views/group.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span4">
+  <div class="span3">
     <h2><%= group.title %></h2>
     <table class="table">
       <tr>
@@ -36,9 +36,19 @@
       </tr>
     </table>
   </div>
-  <div class="span8">
+  <div class="span9">
     <h2><%- msg('group-users') %></h2>
-    <table class="table table-bordered">
+    <p><a href="/group/<%= group.name %>/adduser" class="btn btn-primary">添加用戶</a></p>
+    <table class="table table-bordered table-condensed">
+      <tr>
+        <th><%= msg('uid') %></th>
+        <th><%= msg('username') %></th>
+        <th><%= msg('Nickname') %></th>
+        <th><%= msg('full-name') %></th>
+        <th><%= msg('Email') %></th>
+        <th><%= msg('mobile') %></th>
+        <th><%= msg('birth-date') %></th>
+      </tr>
       <%- partial('partials/userlistitem', group.users) %>
     </table>
   </div>
