--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -1,3 +1,11 @@
+<ul class="breadcrumb">
+  <li>
+    <a href="/">首頁</a>
+    <span class="divider">/</span>
+  </li>
+  <li class="active">用戶組</li>
+</ul>
+
 <div class="row">
   <div class="span6">
     <h2><%= msg('groups') %></h2>
