--- a/views/group/groups.ejs
+++ b/views/group/groups.ejs
@@ -9,6 +9,6 @@
 <div class="row">
   <div class="span6">
     <h2><%= msg('groups') %></h2>
-    <%- partial('partials/groupnode', groupRoot) %>
+    <%- partial('groupnode', groupRoot) %>
   </div>
 </div>
