--- a/views/group/userlist.ejs
+++ b/views/group/userlist.ejs
@@ -7,6 +7,9 @@
     <th><%= msg('Email') %></th>
     <th><%= msg('mobile') %></th>
     <th><%= msg('birth-date') %></th>
+    <% if (group.users.showAction) { %>
+      <th><%= msg('action') %></th>
+    <% } %>
   </tr>
-  <%- partial('partials/userlistitem', group.users) %>
+  <%- partial('userlistitem', group.users) %>
 </table>
