--- a/views/group/group.ejs
+++ b/views/group/group.ejs
@@ -17,7 +17,11 @@
       <p>
         <a href="/group/<%= group.name %>/edit" class="btn btn-primary">
           <i class="icon-edit icon-white"></i>
-          編輯組信息
+          編輯組
+        </a>
+        <a href="/group/<%= group.name %>/del" class="btn btn-danger">
+          <i class="icon-trash icon-white"></i>
+          刪除組
         </a>
       </p>
     <% } %>
