--- a/views/group/groups.ejs
+++ b/views/group/groups.ejs
@@ -1,9 +1,9 @@
 <ul class="breadcrumb">
   <li>
-    <a href="/">首頁</a>
+    <a href="/"><%- msg('index') %></a>
     <span class="divider">/</span>
   </li>
-  <li class="active">用戶組</li>
+  <li class="active"><%- msg('groups') %></li>
 </ul>
 
 <div class="row">
