--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,8 +53,7 @@
       <%- body %>
       <hr />
       <footer>
-        <p><a href="http://net9.org/" target="_blank">THU.DCST.SAST.DNET</a> 2012</p>
-        <p><%- msg('footer-text') %></p>
+        <p><a href="/about">THU.DCST.SAST.NET</a> 2012</p>
       </footer>
     </div>
   </body>
