--- a/views/group/allusers.ejs
+++ b/views/group/allusers.ejs
@@ -1,22 +1,22 @@
 <ul class="breadcrumb">
   <li>
-    <a href="/">首頁</a>
+    <a href="/"><%- msg('index') %></a>
     <span class="divider">/</span>
   </li>
   <li>
-    <a href="/group">用戶組</a>
+    <a href="/group"><%- msg('groups') %></a>
     <span class="divider">/</span>
   </li>
   <li>
     <a href="/group/<%= group.name %>"><%= group.title %></a>
     <span class="divider">/</span>
   </li>
-  <li class="active">所有用戶</li>
+  <li class="active"><%- msg('all-users') %></li>
 </ul>
 
 <div class="row">
   <div class="span12">
-    <h2>全部用戶</h2>
+    <h2><%- msg('all-users') %></h2>
     <%- partial('userlist') %>
   </div>
 </div>
