--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,10 @@
     <img src="/img/net9.gif" width="130" height="130" />
     Accounts9
   </h1>
-  <p>歡迎各位用戶來到Accounts9。</p>
+  <p>欢迎各位酒井用户来到Accounts9。</p>
   <% if (!curUser) { %>
     <p>
-      <a class="btn btn-primary btn-large" href="/login">登入</a>
+      <a class="btn btn-primary btn-large" href="/login"><%= msg('login') %></a>
     </p>
   <% } %>
 
