--- a/views/group/userlistitem.ejs
+++ b/views/group/userlistitem.ejs
@@ -10,11 +10,14 @@
   <td><%= userlistitem.email %></td>
   <td><%= userlistitem.mobile %></td>
   <td><%= userlistitem.birthdate %></td>
-  <% if (group.users.showAction) { %>
+  <% if (group.currentUserIsAdmin && group.users.directList) { %>
     <td>
       <a href="/group/<%= group.name %>/deluser/<%= userlistitem.name %>" class="btn btn-danger btn-mini">
         <i class="icon-trash icon-white"></i>
       </a>
     </td>
+  <% } %>
+  <% if (group.currentUserIsAdmin && group.users.indirectList) { %>
+    <td><%- partial('grouplistplain', userlistitem.groups) %></td>
   <% } %>
 </tr>
